test/files/neg/t6567.check
t6567.scala:9: warning: Suspicious application of an implicit view (Test.this.a2b) in the argument to Option.apply.
  Option[B](a)
           ^
t6567.scala:11: warning: Suspicious application of an implicit view (Test.this.a2b) in the argument to Option.apply.
  val b: Option[B] = Option(a)
                           ^
warning: one feature warning; re-run with -feature for details
error: No warnings can be incurred under -Xfatal-warnings.
three warnings found
one error found
